Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

============================
HYPERMAIL VERSION 2.1.9:
============================
 Peter McCluskey (Feb 23, 2004)
  Released version 2.1.9 tar file.

 Peter McCluskey (Feb 17, 2004)
  Add use_sender_date option.
  Fix instructions for doing "make install" so that the documentation will
  be installed.

 Peter McCluskey (Feb 5, 2004)
  Update much of the documentation.

 Peter McCluskey (Feb 4, 2004)
  Change default in setup.c for spamprotect and spamprotect_id to On.

 Peter McCluskey (Feb 2, 2004)
  Add set_report_new_file and set_report_new_folder options.

 Peter McCluskey (Jan 23, 2004)
  Add in missing <a name="end"> for index files.
  Removed a misleading, nonportable timezone string from link titles in
 toplevel index pages.

 Peter McCluskey (Jan 9, 2004)
  Change to make mbox_shortened option work a little better with
 discard_dup_msgids = 0.
  Change folder_by_date option to use "From " date rather than "Date: "
 to decide which subdirectory to use. This makes it consistent with
 top level index page.

 Peter McCluskey (Dec 26, 2003)
  Add increment = -1 mode to enable automatic determination of whether
 to update or append in most cases.

 Peter McCluskey (Dec 3, 2003)
  Added a mbox_shortened option to handle mboxes that have had messages
 deleted from the start of the mbox.

 Peter McCluskey (Dec 1, 2003)
  Fix mismatch in <ul>, </ul> in date.html with indextable = 0.

 Peter McCluskey (Nov 17, 2003)
  Add a check for the problem with the starting message number that was
 partly fixed on Oct 1. Now old archives with a startmsgnum = 0 .hmrc but
 a first message of 0001.html in this case will be treated as if startmsgnum
 was 0.

 Peter McCluskey (Nov 15, 2003)
  Add Portugese support from Hugo Cisneiros.

 Peter McCluskey (Oct 1, 2003)
  Fix some problems with starting message number that caused bugs when
  increment = 1, linkquotes = 1 and using folder_by_date.
